svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: production
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
