ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud
  namespace: production

spec:
  tls:
  - hosts:
      - "cloud.jokeyshirely.com"
    secretName: cloud-jokeyshirely-tls
  ingressClassName: nginx
  rules:
    - host: cloud.jokeyshirely.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: nextcloud
                port:
                  number: 80
